# financial-data-adapter

./: .env  .gitignore  Architecture.md  Dockerfile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: quality.yml
adapter/: clickhouse_client.py  ingestion.py  normalizers.py  schemas.py  validators.py
airflow/dags/: ingestion_dag.py
api/: middleware.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
external_bank/: __init__.py  apps.py  csv_read_helpers.py  models.py  urls.py  views.py
external_bank/migrations/: 0001_initial.py
financial_data_adapter/: asgi.py  settings.py  urls.py  views.py  wsgi.py
scripts/: create_tenant_and_users.py  entrypoint.sh
templates/: base.html  dashboard.html  data_explorer.html  external_bank.html  login.html
templates/components/: footer.html  navbar.html
tests/: test_data_endpoints.py  test_external_bank.py  test_ingestion_clickhouse.py  test_login.py  test_validation.py
