[project]
version = "1.0.0"

[tool.ruff]
line-length = 88
indent-width = 4
show-fixes = true
lint.select = ["E4", "E7", "E9", "F", "I", "UP", "N"]
exclude = ["main/migrations", ".env", ".git", ".github", ".idea", "__pycache__", ".DS_Store", "main/apps.py", "main/admin.py", "airline_mgmt/celery.py"]
lint.ignore = []

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
precision = 2

[tool.interrogate]
fail-under = 90
verbose = 1
ignore-init-method = true
ignore-init-module = true
ignore-nested-classes = true
ignore_magic = true
ignore_semiprivate = true
exclude = ["main/migrations", ".env", ".git", ".github", ".idea", "__pycache__", ".DS_Store", "main/apps.py", "main/admin.py", "airline_mgmt/celery.py"]
quiet = false
color = true
omit_covered_files = false

[tool.ruff.lint.isort]
known-first-party = ["main", "airline_mgmt"]

#[tool.pytest.ini_options]
#DJANGO_SETTINGS_MODULE = "airline_mgmt.settings"
#python_files = ["test_*.py", "*_test.py"]
#addopts = "-q --disable-warnings --maxfail=1"
