[project]
version = "1.0.0"

[tool.ruff]
line-length = 88
indent-width = 4
show-fixes = true
lint.select = ["E4", "E7", "E9", "F", "I", "UP", "N"]
exclude = ["api/migrations", ".env", ".git", ".github", ".idea", "__pycache__", ".DS_Store", "api/apps.py", "api/admin.py"]
lint.ignore = []

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
precision = 2

[tool.interrogate]
fail-under = 90
verbose = 1
ignore-init-method = true
ignore-init-module = true
ignore-nested-classes = true
ignore_magic = true
ignore_semiprivate = true
exclude = ["api/migrations", ".env", ".git", ".github", ".idea", "__pycache__", ".DS_Store", "api/apps.py", "api/admin.py"]
quiet = false
color = true
omit_covered_files = false

[tool.ruff.lint.isort]
known-first-party = ["external_bank", "financial_data_adapter", "api"]
